# CUDA-and-OpenGL-Image-Filters

./: .gitignore  README.md
cuda-filters/: CMakeLists.txt
cuda-filters/src/: blur.cu  blur_shared.cu  grayscale.cu  sobel.cu
gl-filters/: CMakeLists.txt
gl-filters/OpenGLProject/: Camera.cpp  Camera.h  OpenGLProject.vcxproj  OpenGLProject.vcxproj.filters  Texture.cpp  Texture.h  default.vert  glad.c  main.cpp  shaderClass.cpp  shaderClass.h
gl-filters/OpenGLProject/Dependencies/include/glad/: glad.h
gl-filters/glTest/OpenGLProject/: OpenGLProject.sln  OpenGLProject.vcxproj  VAO.cpp  main.cpp  shaderClass.cpp
gl-filters/src/: main_window.cpp
